[package]
name = "pallet-staking_with_credit"
version = "2.0.0-rc6"
authors = ["deeper dev"]
edition = "2018"
license = "Apache-2.0"
description = "FRAME pallet staking_with_credit"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
static_assertions = "1.1.0"
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
sp-std = {default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6'}
sp-npos-elections = {default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6' }
sp-io ={ default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6' }
sp-runtime = {default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6'}
sp-staking = {default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6' }
frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6'}
frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6' }
pallet-session = {default-features = false, features = ["historical"], git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6' }
pallet-authorship = {default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6'}
sp-application-crypto = {default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6'}
pallet-delegating = {default-features = false, path = "../delegating", version = '2.0.0-rc6'}

# Optional imports for benchmarking
frame-benchmarking = {default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6', optional = true }
rand_chacha = { version = "0.2", default-features = false, optional = true }

[dev-dependencies]
sp-core = { git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6' }
sp-storage = { git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6' }
pallet-balances = { git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6' }
pallet-timestamp = { git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6' }
pallet-staking-reward-curve = { git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6' }
substrate-test-utils = { git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6' }
frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6'}
rand_chacha = { version = "0.2" }
parking_lot = "0.10.2"
env_logger = "0.7.1"
hex = "0.4"

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-npos-elections/std",
	"sp-io/std",
	"frame-support/std",
	"sp-runtime/std",
	"sp-staking/std",
	"pallet-session/std",
	"frame-system/std",
	"pallet-authorship/std",
	"sp-application-crypto/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"rand_chacha",
]
